--- a/src/styles/Board.css
+++ b/src/styles/Board.css
@@ -1,10 +1,5 @@
 body {
-    background-color: Azure;
     width: 100%;
-    text-align: center;
-}
-h1 {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-align: center;
 }
 input {
@@ -16,12 +11,63 @@ input {
     background-color: whte;
     color: white;
 }
-.guesses {
-    border: solid 1px black;
-    margin-left: 30%;
-    margin-right: 30%;
-    margin-top: 3%;
-    margin-bottom: 3%;
-    height: 100px;
+.containter{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.wordContainer {
+    margin: 7% 20%;
+    font-size: 36px;
+    max-width: 90%;
+}
+.background{
+    position: absolute;
+    z-index: -1;   
+    width: 100%;
+    height: 100%;
+    background-image: url(../assets/usMapass.png);
+    background-size: cover;
+    opacity: 0.7;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+}
+.score {
+    margin: 7% 20%;
+    border: 1px solid rgb(0, 188, 212);
+    max-width: 80%;
+
+}
+.loss {
+    color: rgb(255, 64, 129);
+    font-size: 20px;
+}
+
+.paperInner {
+    padding: auto;
     text-align: center;
+    margin-top: 10%;
+    margin-bottom: 3%;
+    height: 550px;
+    width: 300px;
+    background-color: white;
+    opacity: 1;
+}
+.guesses {
+    border: 1px solid rgb(0, 188, 212);
+    background-color: rgb(0, 188, 212);
+    color: white;
+    font-size: 20px;
+    height: 150px;
+    margin: 3% 10%;
+
+}
+.title {
+    color: rgb(0, 188, 212);
+    font-weight: bold;
+    font-size: 36px;
+    margin-top: 3%;
 }
