--- a/src/assets/styles/Board.css
+++ b/src/assets/styles/Board.css
@@ -28,7 +28,7 @@ input {
     z-index: -1;   
     width: 100%;
     height: 100%;
-    background-image: url(../assets/usMapass.png);
+    background-image: url("../images/usMapass.png");
     background-size: cover;
     opacity: 0.7;
     top: 0;
