--- a/src/assets/styles/Board.css
+++ b/src/assets/styles/Board.css
@@ -16,7 +16,6 @@ input {
     flex-direction: column;
     justify-content: center;
 }
-
 .wordContainer {
     margin: 7% 20%;
     font-size: 36px;
@@ -29,7 +28,9 @@ input {
     width: 100%;
     height: 100%;
     background-image: url("../images/usMapass.png");
-    background-size: cover;
+    background-repeat:no-repeat;
+    background-size:contain;
+    background-position:center;
     opacity: 0.7;
     top: 0;
     left: 0;
@@ -50,6 +51,7 @@ input {
     font-size: 16px;
 }
 .guessedLetters{
+    padding-top: 15%;
     font-size: 20px;
 }
 .remaining { 
@@ -60,13 +62,11 @@ input {
     color: rgb(255, 64, 129);
     font-size: 20px;
 }
-
 .paperInner {
     padding: auto;
     text-align: center;
     margin-top: 10%;
-    margin-bottom: 3%;
-    height: 550px;
+    height: 500px;
     width: 300px;
     background-color: white;
     opacity: 1;
@@ -78,7 +78,6 @@ input {
     font-size: 20px;
     height: 150px;
     margin: 3% 20%;
-
 }
 .title {
     color: rgb(0, 188, 212);
