--- a/src/assets/styles/Board.css
+++ b/src/assets/styles/Board.css
@@ -11,7 +11,17 @@ input {
     background-color: whte;
     color: white;
 }
-.containter{
+.paper {
+    height: 85%;
+    width: 35%;
+    margin: 20;
+    display: inline-block;
+    opacity: 0.95;
+    margin-top: 5%;
+    justify-content: center;
+    border: 1px solid rgb(0, 188, 212);
+}
+.containter {
     display: flex;
     flex-direction: column;
     justify-content: center;
