--- a/src/assets/styles/Board.css
+++ b/src/assets/styles/Board.css
@@ -80,6 +80,7 @@ input {
     opacity: 1;
 }
 .guesses {
+    border-radius: 25px;
     border: 1px solid rgb(0, 188, 212);
     background-color: rgb(0, 188, 212);
     color: white;
