--- a/src/assets/styles/Board.css
+++ b/src/assets/styles/Board.css
@@ -16,9 +16,8 @@ input {
     opacity: 0.95;
     padding: 20px;
     margin-top: 15%;
+    font-family: sans-serif;
 }
-
-
 
 .wordContainer {
     margin: 5% 20%;
