--- a/src/assets/styles/static.css
+++ b/src/assets/styles/static.css
@@ -84,9 +84,9 @@ h3 {
 p {
   font-size: 18px;
   text-align: left;
+  margin: 15px;
 }
 .navbar {
-  height: 90px;
   padding-bottom: 0;
   margin-bottom: 0px;
 }
@@ -110,5 +110,43 @@ li {
   display: inline;
 }
 .outter {
-  background: #ddd
+  background: #ddd;
+}
+.portfolio-picture {
+  width: 120px;
+  height: 120px;
+}
+.footer {
+  margin-top: 20px;
+  border-top: 5px solid #4aaaa5;
+  height: 30px;
+  background-color: #666666;
+  bottom: 0;
+  color: white;
+}
+.inner {
+  background-color: white;
+  margin-top: 20px;
+  min-height: 550px;
+  justify-content: center;
+}
+.inner-title {
+    float: left;
+    margin-left: 12%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 20px;
+    color: #4aaaa5;
+}
+.line {
+  border: 1px solid #ddd;
+}
+.lower-grid {
+  justify-content: center;
+  background-color: white;
+  margin-top: 20px;
+  min-height: 550px;
+}
+.container {
+  max-width: 968px;
 }
