--- a/src/assets/styles/static.css
+++ b/src/assets/styles/static.css
@@ -1,80 +1,4 @@
-/* footer {
-  margin-top: 20px;
-  position: fixed;
-  bottom: -30px;
-  width: 100%;
-  height: 75px;
-  box-shadow: 0 50vh 0 50vh #000;
-}
-img {
-  float: left;
-}
 
-body {
-  background-color: #dddd;
-}
-h3 {
-  background-color: #fff;
-  color: #4aaaa5;
-  margin-left: 3%;
-  margin-top: 3%;
-  padding-bottom: 2%;
-  font-family: 'Georgia', Times, Times New Roman, serif;
-}
-.navbar-text {
-  background-color: #4aaaa5;
-  margin-bottom: 0px;
-  height: 65px;
-  width: 200px;
-  color: white;
-}
-#navtitle {
-  color: white;
-  text-align: center;
-  padding-top: 15px;
-  font-size: 20px;
-}
-.navbar {
-  border-bottom: 5px solid #666666;
-}
-#inner {
-  background-color: white;
-}
-.footer-copyright {
-  margin-top: 20px;
-  border-top: 5px solid #4aaaa5;
-  height: 30px;
-  background-color: #666666;
-  bottom: 0;
-  color: white;
-}
-.row {
-  margin-bottom: 20px;
-}
-.overlay {
-  position: absolute;
-  background-color: #4aaaa5;
-  text-align: center;
-  width: 80%;
-  height: 45px;
-  line-height: 30px;
-  top: 55%;
-  left: 10%;
-  color: white;
-}
-#form-inner {
-  margin-left: 40%;
-  text-align: center;
-}
-#proj-img {
-  text-align: center;
-  position: relative;
-  top: 0;
-  left: 0;
-}
-.card-img-top {
-  max-width: 100%;
-} */
 .myPicture{
   float: left;
   width: 250px;
@@ -91,20 +15,22 @@ p {
   margin-bottom: 0px;
 }
 .topBorder {
-  border-bottom: 5px solid #666666;
+  background-color: white;
+  border-bottom: 3px solid #666666;
 
 }
 .navbar-title {
   background-color: #4aaaa5;
   color: white;
-  padding-top: 20px;
-  height: 76px;
+  padding-top: 28px;
+  height: 78px;
   margin-bottom: 0px;
 }
 .navbar-links {
-  padding-top: 20px;
+  padding-top: 30px;
   height: 76px;
   margin-bottom: 0px;
+  color: #666666;
 }
 li {
   display: inline;
@@ -138,8 +64,10 @@ li {
     font-size: 20px;
     color: #4aaaa5;
 }
-.line {
+.hr {
+  width: 100%;
   border: 1px solid #ddd;
+  margin-bottom: 30px;
 }
 .lower-grid {
   justify-content: center;
@@ -149,4 +77,10 @@ li {
 }
 .container {
   max-width: 968px;
+}
+.form-label {
+  text-align: left;
+}
+.links {
+  color: #666666
 }
