--- a/src/assets/styles/static.css
+++ b/src/assets/styles/static.css
@@ -1,3 +1,6 @@
+.outter {
+  font-family: sans-serif;
+}
 
 .myPicture{
   float: left;
@@ -9,14 +12,16 @@ p {
   font-size: 18px;
   text-align: left;
   margin: 15px;
+  color: #666666;
+
 }
 .navbar {
-  padding-bottom: 0;
-  margin-bottom: 0px;
+  padding-bottom: 0px;
+  margin-bottom: -1px;
 }
 .topBorder {
   background-color: white;
-  border-bottom: 3px solid #666666;
+  border-bottom: 5px solid #5555;
 
 }
 .navbar-title {
@@ -25,6 +30,8 @@ p {
   padding-top: 28px;
   height: 78px;
   margin-bottom: 0px;
+  border-bottom: 1px solid #5555;
+
 }
 .navbar-links {
   padding-top: 30px;
@@ -39,8 +46,8 @@ li {
   background: #ddd;
 }
 .portfolio-picture {
-  width: 120px;
-  height: 120px;
+  width: 300px;
+  height: 300px;
 }
 .footer {
   margin-top: 20px;
@@ -80,7 +87,26 @@ li {
 }
 .form-label {
   text-align: left;
+  color: #666666;
+
 }
 .links {
-  color: #666666
+  color: #666666;
+  margin-left: 5px;
+}
+
+.project-link{
+  position: relative;
+}
+
+.project-overlay {
+  position: absolute;
+  left: 0px;
+  z-index: 1;
+  bottom: 70px;
+  background-color: #4aaaa5;
+  height: 60px;
+  padding-top: 20px;
+  width: 100%;
+  color: white;
 }
