--- a/src/assets/styles/static.css
+++ b/src/assets/styles/static.css
@@ -27,6 +27,7 @@ p {
 .navbar-title {
   background-color: #4aaaa5;
   color: white;
+  font-size: 26px;
   padding-top: 28px;
   height: 78px;
   margin-bottom: 0px;
