--- a/src/assets/styles/static.css
+++ b/src/assets/styles/static.css
@@ -1,5 +1,8 @@
+
 .outter {
   font-family: sans-serif;
+  background: #ddd;
+  min-height: 920px;
 }
 
 .myPicture{
@@ -28,7 +31,8 @@ p {
   background-color: #4aaaa5;
   color: white;
   font-size: 26px;
-  padding-top: 28px;
+  padding-top: 20px;
+  padding-bottom: 10px;
   height: 78px;
   margin-bottom: 0px;
   border-bottom: 1px solid #5555;
@@ -39,23 +43,23 @@ p {
   height: 76px;
   margin-bottom: 0px;
   color: #666666;
+  text-decoration: none;
 }
 li {
   display: inline;
 }
-.outter {
-  background: #ddd;
-}
+
 .portfolio-picture {
   width: 300px;
   height: 300px;
 }
 .footer {
-  margin-top: 20px;
+  margin-top: 1px;
   border-top: 5px solid #4aaaa5;
   height: 30px;
+  font-family: sans-serif;
+  font-size: 12px;
   background-color: #666666;
-  bottom: 0;
   color: white;
 }
 .inner {
@@ -82,6 +86,7 @@ li {
   background-color: white;
   margin-top: 20px;
   min-height: 550px;
+  margin-bottom: 20px;
 }
 .container {
   max-width: 968px;
